--- a/Forms/style.css
+++ b/Forms/style.css
@@ -1,4 +1,4 @@
-/* CSS reset */
+/* https://www.htmlecsspro.com/artigo/formulario-de-login-e-cadastro-com-html5-e-css3 */
 *, *:before, *:after { 
   margin:0;
   padding:0;
